# status-repository

./: MODULE.bazel  README.md
status_repository/: git_stamp.bzl  repo.bzl
tests/: BUILD  git_stamp_basic.tpl  git_stamp_test.bzl  not_empty.sh  status_repository_test.bzl
